<resources>
    <string name="app_name">Shels</string>
    <string name="login">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_login">Логин</string>
    <string name="enter">Войти</string>
    <string name="check_hasConnection">Отсутствует соединение с Интернетом!</string>
    <string name="check_error_authorization">Ошибка авторизации</string>
    <string name="check_error">Ошибка соединения с сервером</string>
    <string name="login_error">Неправильный логин или пароль!</string>
    <string name="login_error2">Изменены учетные данные, либо учетная запись заблокирована!</string>
    <string name="alertDialog_ok">Понятно</string>
    <string name="save_password">Запомнить меня</string>
    <string name="error">Ошибка</string>
    <string name="delivery_documents">Накладные на доставку</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="tasks_search">Поиск по задачам...</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tasks">Задачи</string>
    <string name="clients">Клиенты</string>
    <string name="clients_map">Карта задач</string>
    <string name="today">СЕГОДНЯ</string>
    <string name="completed">Завершено</string>
    <string name="client_search">Поиск по клиентам...</string>
    <string name="search_map">Поиск по карте...</string>
    <string name="selling">Отгрузка клиенту</string>
    <string name="removalOfComplaints">Вывоз рекламации</string>
    <string name="complaintDelivery">Доставка по рекламации</string>
    <string name="moving">Перемещение</string>
    <string name="scan_again">Товар не найден в накладной. Сканировать ещё раз?</string>
    <string name="result">Результат</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="exit_app">Завершить работу?</string>
    <string name="barcode_scan">Отсканируйте штрих-код</string>
    <string name="client">Клиент:</string>
    <string name="warehouse">Склад:</string>
    <string name="date">Дата:</string>
    <string name="address">Адрес:</string>
    <string name="phone">Телефон:</string>
    <string name="products_title_name">Наименование, характеристика</string>
    <string name="products_title_count">Количество / Проверено</string>
    <string name="document_tab_client">Накладная</string>
    <string name="document_tab_goods">Товары</string>
    <string name="call">Позвонить</string>
    <string name="document_not_found">Документ не найден!</string>
    <string name="document_find_product">Товар, найден в накладной! Продолжить сканирование?</string>
    <string name="product_scan_successfully">Товар найден в накладной, продолжить сканирование?</string>
    <string name="client_call">Выполнить вызов абоненту</string>
    <string name="camera_not_found">Похоже что ваше устройство не поддерживает работу с камерой :(</string>
    <string name="document_execute_task">ВЫПОЛНИТЬ ЗАДАЧУ</string>
    <string name="document_saved">Накладная успешно сохранена!</string>
    <string name="send_data_to_server">Отправка данных на сервер...</string>
    <string name="images_download">Загрузка изображений...</string>
    <string name="empty_state_photos">Фотографий пока ещё нет...\n Сфотографируйте акт приемки с подписью клиента.</string>
    <string name="empty_state_documents">Задач пока ещё нет...\n Потяните вниз для обновления.</string>
    <string name="document_tab_documents">Документы</string>
    <string name="update">Обновить</string>
</resources>
