<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:theme="@style/AppTheme"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:src="@drawable/logo_shels"
        app:layout_constraintBottom_toTopOf="@+id/edt_login"
        app:layout_constraintEnd_toEndOf="@+id/edt_login"
        app:layout_constraintStart_toStartOf="@+id/edt_login"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/input_shape"
        android:drawableStart="@drawable/ic_https_black_24dp"
        android:fontFamily="@font/rubik_light"
        android:gravity="center"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/hint"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/input_shape"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:fontFamily="@font/rubik_light"
        android:gravity="center"
        android:hint="@string/hint_login"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/hint"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/edt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btn_auth"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_authorization"
        android:text="@string/enter"
        android:typeface="monospace"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/edt_password"
        app:layout_constraintStart_toStartOf="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        app:spinning_bar_color="#FFF"
        app:spinning_bar_padding="3dp"
        app:spinning_bar_width="3dp"></br.com.simplepass.loadingbutton.customViews.CircularProgressButton>

    <CheckBox
        android:id="@+id/save_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_password"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_auth"
        app:layout_constraintStart_toStartOf="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="13dp"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toTopOf="@+id/btn_auth"
        app:layout_constraintEnd_toEndOf="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_password">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>