<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/document_card"
    tools:context=".Activity.DocumentActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/document_card_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/document_margin"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/document_client_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="@dimen/document_margin"
                android:text="@string/client"
                android:textSize="@dimen/document_textSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/document_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/document_margin"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:textSize="@dimen/document_textSize"
                tools:text="Иванов Иван Иванович"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/document_card_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/document_margin"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/document_card_client">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/document_phone_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/document_margin"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/phone"
                android:textSize="@dimen/document_textSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/document_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/document_margin"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/document_textSize"
                android:layout_marginRight="10dp"
                tools:text="+7 (978) 123-13-31"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/document_card_address"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_margin="@dimen/document_margin"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/document_card_phone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/document_address_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/document_margin"
                android:text="@string/address"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/document_textSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/document_address"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/document_margin"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                tools:text="297408, Крым Респ, Евпатория г, Некрасова ул, дом № 51, кв.98"
                android:textSize="@dimen/document_textSize" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/document_card_map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/document_margin"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/document_btn_execute_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/document_card_address">

        <com.yandex.mapkit.mapview.MapView
            android:id="@+id/document_mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/document_btn_execute_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/button_execute_task"
        android:textStyle="bold"
        android:text="@string/document_execute_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </Button>

    <ProgressBar
        android:id="@+id/document_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ProgressBar>

</androidx.constraintlayout.widget.ConstraintLayout>